ch8/yaml/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: myapps
spec:
  ports:
  - name: service
    port: 5000
  selector:
    app: app1
