ch8/yaml/error-injector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: error-injector
  namespace: myapps
spec:
  ports:
  - name: service
    port: 5000
  selector:
    app: error-injector
